Hiding the maintenance button (added a button to PhrasebookForm and functionality transferred to AddPhraseForm)

--- a/MyPhrasebookAndroid/res/layout/main.xml
+++ b/MyPhrasebookAndroid/res/layout/main.xml
@@ -38,5 +38,6 @@
 		android:layout_height="wrap_content"
 		android:text="@string/Maintenance"
 		android:layout_weight="1"
+		android:visibility="gone"
 		/>
 </LinearLayout>
