--- a/MyPhrasebookAndroid/res/layout/phrasebook.xml
+++ b/MyPhrasebookAndroid/res/layout/phrasebook.xml
@@ -1,26 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-android:id="@+id/TopRelativeLayout"
+<LinearLayout
+android:id="@+id/TopLayout"
 android:layout_width="fill_parent"
 android:layout_height="fill_parent"
+android:orientation="vertical"
 xmlns:android="http://schemas.android.com/apk/res/android"
 >
-<EditText
-android:id="@+id/EditText"
-android:layout_width="fill_parent"
-android:layout_height="wrap_content"
-android:textSize="18sp"
-android:layout_alignParentTop="true"
-android:layout_alignParentLeft="true"
->
-</EditText>
-<ListView
-android:id="@+id/ListView"
-android:layout_width="fill_parent"
-android:layout_height="wrap_content"
-android:layout_alignParentLeft="true"
-android:layout_below="@id/EditText"
-android:layout_alignWithParentIfMissing="true"
->
-</ListView>
-</RelativeLayout>
+	<LinearLayout
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:orientation="horizontal"
+	>
+		<EditText
+			android:id="@+id/EditedPhrase"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_weight="1"
+			/>
+	
+		<Button
+			android:id="@+id/BttAdd"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/Add"
+			/>
+		
+	</LinearLayout>
+	
+	<ListView
+		android:id="@android:id/list"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:layout_alignParentLeft="true"
+		/>
+
+</LinearLayout>
