Image question mark button instead of the textual version

--- a/MyPhrasebookAndroid/res/layout/quiz.xml
+++ b/MyPhrasebookAndroid/res/layout/quiz.xml
@@ -66,13 +66,12 @@ android:orientation="vertical"
 			<!-- Dynamic button resources will be embedded here -->	
 		</LinearLayout>
 		
-		<Button
+		<ImageButton
 			android:id="@+id/bttRevealAnswer"
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
 			android:layout_weight="1"
-			android:text="@string/RevealAnswer"
-			android:textSize="100sp"
+	   		android:src="@drawable/question_mark"
 		/>
 		
 	</LinearLayout>
