--- a/MyPhrasebookAndroid/res/layout/phrasebook.xml
+++ b/MyPhrasebookAndroid/res/layout/phrasebook.xml
@@ -6,25 +6,30 @@ android:layout_height="fill_parent"
 android:orientation="vertical"
 xmlns:android="http://schemas.android.com/apk/res/android"
 >
+	<Spinner
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:id="@+id/spinCategory"
+           />		
+	
 	<LinearLayout
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:orientation="horizontal"
-	>
-		<EditText
-			android:id="@+id/EditedPhrase"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_weight="1"
-			/>
-	
-		<Button
-			android:id="@+id/BttAdd"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="@string/Add"
-			/>
+		>
+			<EditText
+				android:id="@+id/EditedPhrase"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_weight="1"
+				/>
 		
+			<Button
+				android:id="@+id/BttAdd"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="@string/Add"
+				/>
 	</LinearLayout>
 	
 	<ListView
